<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nom du jardin"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Adresse du jardin"
                android:inputType="text" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/marker_icon"
                android:id="@+id/btn_adrese"/>
    </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description du jardin"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical" />
        </android.support.design.widget.TextInputLayout>




        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_upload"
                android:layout_width="73dp"
                android:layout_height="71dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/image_ajout"
                android:padding="12dp"
                android:text="" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_ajouter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="#bbd373"
            android:padding="12dp"
            android:text="Valider" />


    </LinearLayout>
</ScrollView>