<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_les_jardins"
            android:icon="@drawable/ic_map_black_48dp"
            android:title="Carte des jardins " />
        <item
            android:id="@+id/list_jardins"
            android:icon="@drawable/list_icon"
            android:title="Liste des jardins" />

        <item
            android:id="@+id/nav_coup_coeurs"
            android:icon="@drawable/heart_plein"
            android:title="Mes coup de coeurs" />

        <item
            android:id="@+id/nav_ajouter"
            android:icon="@drawable/ic_add_circle_outline_black_48dp"
            android:title="Ajouter un jardin" />

    </group>


</menu>
